--- a/TechTest/TechTest/packages.config
+++ b/TechTest/TechTest/packages.config
@@ -3,6 +3,7 @@
   <package id="EntityFramework" version="6.1.1" targetFramework="net451" />
   <package id="jQuery" version="1.10.2" targetFramework="net451" />
   <package id="jQuery.Validation" version="1.11.1" targetFramework="net451" />
+  <package id="knockoutjs" version="3.2.0" targetFramework="net451" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.0" targetFramework="net451" />
   <package id="Microsoft.AspNet.Razor" version="3.2.0" targetFramework="net451" />
   <package id="Microsoft.AspNet.WebApi" version="5.2.0" targetFramework="net451" />
