Added edit view

--- a/TechTest/TechTest/TechTest.csproj
+++ b/TechTest/TechTest/TechTest.csproj
@@ -184,6 +184,7 @@
       <LastGenOutput>TechTestDBModel.cs</LastGenOutput>
     </Content>
     <Content Include="Scripts\jquery-1.10.2.min.map" />
+    <Content Include="Views\Home\Partials\_EditPerson.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
